--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.6.2",
     "expo": "^45.0.0",
     "expo-status-bar": "~1.3.0",
+    "expo-updates": "~0.13.1",
     "native-base": "3.4.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
